<resources>
    <string name="app_name">Simsa  Tickets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_empleado_inicio">Simsa  Tickets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_empleado">Empleado</string>
    <string name="panel">panel de control</string>
    <string name="inicio">inicio</string>
    <string name="Agreg">Agregar</string>
    <string name="hist">Mi historial</string>
    <string name="registro">Registrar problema</string>
    <string name="datos">Ver datos</string>
    <string name="problem">no. problema: 123</string>
    <string name="title_activity_tecnico">TecnicoActivity</string>
    <string name="title_activity_c_root">cRoot</string>
    <string name="title_activity_root">Root</string>
</resources>
