<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <item android:title="@string/panel"
        android:id="@+id/cominuca">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/inicio"
                    android:title="@string/inicio" />
                <!--android:icon="@drawable/house_outline"-->
                <item
                    android:id="@+id/historial"
                    android:title="@string/hist" />
                <!--android:icon="@drawable/linechart"-->
                <item
                    android:id="@+id/registrar"
                    android:title="@string/registro" />
                <!--android:icon="@drawable/plus"-->

                <item
                    android:id="@+id/datos"
                    android:title="@string/datos" />
                <!--android:icon="@drawable/idcard"-->

            </group>
        </menu>
    </item>

</menu>
