<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/panel"
        android:id="@+id/rootpanel">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/inicioroot"
                    android:icon="@drawable/house_outline"
                    android:title="@string/inicio" />

                <item
                    android:id="@+id/historialroot"
                    android:icon="@drawable/linechart"
                    android:title="Historial" />

                <item
                    android:id="@+id/agregarroot"
                    android:icon="@drawable/plus"
                    android:title="@string/Agreg" />

            </group>
        </menu>
    </item>

</menu>
